[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadi-jif"
version = "0.1.4"
description = "Python interface and configurator for ADI JESD Interface Framework"
authors = [{ name = "Travis F. Collins", email = "travis.collins@analog.com" }]
maintainers = [
    {name = "Travis Collins", email="travis.collins@analog.com"},
    {name = "Analog Devices, Inc."}
]
license = { text = "EPL-2.0" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "numpy",
    "openpyxl>=3.1.3",
    "pandas>=1.1.5",
]

[project.optional-dependencies]
cplex = ["cplex", "docplex"]
gekko = ["gekko"]
ortools = ["ortools>=9.7.0"]
draw = ["pyd2lang-native==0.0.3"]
tools = ["streamlit"]
e2e = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.4",
    "pytest-base-url>=2.0.0",
    "pytest-xdist>=3.5.0",
    "pillow>=10.0.0",
    "pixelmatch>=0.3.0",
]

[project.scripts]
jiftools = "adijif.tools.explorer.cli:run_streamlit"

[tool.coverage.paths]
source = ["adijif"]

[tool.coverage.run]
branch = true
source = ["adijif"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.setuptools.packages.find]
where = ["."]
include = ["adijif*"]
exclude = ["tests*"]
namespaces = true

[tool.setuptools]
py-modules = ["adijif"]

[tool.setuptools.package-data]
adijif = ["adijif/converters/resources/*", "adijif/d2/*.so", "adijif/d2/*.h"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    "docs",
    "*_bf.py",
    ".git",
    "__pycache__",
    ".venv",
    ".nox",
]

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "S",    # flake8-bandit
    "W",    # pycodestyle warnings
]
ignore = [
    "E203",    # whitespace before ':'
    "E501",    # line too long (handled by formatter)
    "E722",    # do not use bare except
    "ANN101",  # missing type annotation for self
    "S101",    # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"*/system.py" = ["F401", "E722", "S307"]
"*/fpgas/xilinx.py" = ["E722"]
"*/converters/adrv9009.py" = []
"*/converters/ad9081.py" = ["E741"]
"*/pysym/*.py" = ["ANN", "C901", "F821"]
"tests/*" = ["S101", "S603", "S607", "ANN"]
"noxfile.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["adijif", "tests"]
known-third-party = ["docplex", "gekko", "numpy", "pandas"]
