[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadi-jif"
version = "0.1.5"
description = "Python interface and configurator for ADI JESD Interface Framework"
authors = [{ name = "Travis F. Collins", email = "travis.collins@analog.com" }]
maintainers = [
    {name = "Travis Collins", email="travis.collins@analog.com"},
    {name = "Analog Devices, Inc."}
]
license = { text = "EPL-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy",
    "openpyxl>=3.1.3",
    "pandas>=1.1.5",
]

[project.optional-dependencies]
cplex = ["cplex", "docplex"]
gekko = ["gekko"]
draw = ["pyd2lang-native==0.1.1"]
tools = ["streamlit"]
e2e = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.4",
    "pytest-base-url>=2.0.0",
    "pytest-xdist>=3.5.0",
    "pillow>=10.0.0",
    "pixelmatch>=0.3.0",
    "pytest-asyncio",
    "inline-snapshot",
]
mcp = ["fastmcp", "pytest-asyncio", "inline-snapshot"]


[project.scripts]
jiftools = "adijif.tools.explorer.cli:run_streamlit"
jifmcp = "adijif.mcp_server:main"

[tool.coverage.paths]
source = ["adijif"]

[tool.coverage.run]
branch = true
source = ["adijif"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.setuptools.packages.find]
where = ["."]
include = ["adijif*"]
exclude = ["tests*"]
namespaces = true

[tool.setuptools]
py-modules = ["adijif"]

[tool.setuptools.package-data]
adijif = ["adijif/converters/resources/*", "adijif/d2/*.so", "adijif/d2/*.h"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "S",    # flake8-bandit
    "W",    # pycodestyle warnings
    "C90",  # mccabe
]
ignore = [
    "E203",   # Whitespace before ':'
    "E501",   # Line too long
    "E722",   # Do not use bare `except`
    "S101",   # Use of `assert` detected
    "ANN101", # Missing type annotation for `self` in method
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in `__init__`
    "D211",   # No blank lines allowed before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D102",   # Missing docstring in public method
    "D415",   # First line should end with a period, question mark, or exclamation point
    "D417",   # Missing argument description in the docstring
]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/system.py" = ["F401", "E722", "S307"]
"**/fpgas/xilinx.py" = ["E722"]
"tests/**" = ["S101", "ANN", "D"]
"tests/tools/e2e/**" = ["S603", "S607"]
"noxfile.py" = ["ANN"]
"**/converters/adrv9009.py" = ["E501"]
"**/converters/ad9081.py" = ["E741"]
"**/converters/ad9084_util.py" = ["B905"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["adijif"]
known-local-folder = ["tests"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nox.*", "pytest"]
ignore_missing_imports = true
